--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,59 @@
   cursor: pointer;
 }
 
+.persona-card:hover{
+  background-color: #d4d4d4;
+}
+
 .arrow-icon {
   color: #888;
+}
+
+.title{
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.card-individual{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 250px; /* Ajuste del tamaño cuadrado */
+  height: 250px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+h2 {
+  margin-bottom: 20px;
+  font-size: 1.5rem;
+  color: #333;
+}
+
+.persona-info p {
+  display: flex;
+  align-items: center;
+  margin: 5px 0;
+  font-size: 1rem;
+  color: #555;
+}
+
+.icon {
+  margin-right: 10px;
+  color: #888;
+}
+
+.card-individual:hover {
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15); /* Efecto hover */
+}
+
+.persona{
+  text-align: center;
+  padding: 40px;
+  justify-content: center;
 }
