--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@
   border-radius: 5px;
   background-color: #f9f9f9;
   cursor: pointer;
+  width: 100%;
 }
 
 .persona-card:hover{
@@ -103,4 +104,75 @@ h2 {
   text-align: center;
   padding: 40px;
   justify-content: center;
+}
+
+.navbar {
+  justify-content: flex-start;
+}
+
+.nav-link {
+  margin-right: 10px;
+  color: white;
+  text-decoration: none;
+}
+
+.nav-link:hover {
+  color: lightgray;
+}
+
+.nav{
+  margin-left: 40px;
+}
+
+.container-lista{
+  padding-left: 20%;
+  padding-right: 20%;
+  justify-content: center;
+}
+
+form {
+  max-width: 600px; /* Reduce el ancho del formulario */
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f8f9fa; /* Color de fondo claro */
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-top: 10px;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+  text-align: left; /* Alinea los labels a la izquierda */
+}
+
+input[type="text"], textarea {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ced4da;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+textarea {
+  resize: none; /* Evita el redimensionamiento manual */
+}
+
+button {
+  width: 100%;
+  padding: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0056b3;
 }
