--- a/src/App.css
+++ b/src/App.css
@@ -67,9 +67,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 250px; /* Ajuste del tamaño cuadrado */
-  height: 250px;
-  padding: 20px;
+  width: 300px; /* Ajuste del tamaño cuadrado */
+  height: 300px;
   border: 1px solid #ccc;
   border-radius: 10px;
   background-color: #f9f9f9;
@@ -79,8 +78,10 @@
 
 h2 {
   margin-bottom: 20px;
+  margin-top: 20px;
   font-size: 1.5rem;
   color: #333;
+  text-align: center;
 }
 
 .persona-info p {
@@ -175,4 +176,37 @@ button {
 
 button:hover {
   background-color: #0056b3;
+}
+
+.estadisticas-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 20px;
+  background-color: #f5f5f5;
+  border-radius: 10px;
+  width: 80%;
+  margin: auto;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.stat-item {
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+  padding: 15px;
+  margin: 10px 0;
+  border-radius: 8px;
+  width: 100%;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.stat-item p {
+  font-family: 'Arial', sans-serif;
+  font-size: 16px;
+  color: #555;
+  margin: 0;
+  margin-left: 10px;
 }
